src/design/sizes.scss
// Banner
$banner-height: 48px;
$gve-layout-banner-height: 36px;

// Side menu
$side-menu-width: 60px;
$open-side-menu-width: 260px;
$side-menu-entry-height: 56px;
$side-menu-sub-entry-height: 28px;
$side-menu-icon-size: 25px;

// Service toolbar
$toolbar-height: 50px;

// Borders
$light-radius-size: 5px;

// Content
$size-content-width-max: 50rem;
$size-content-width-min: 25rem;

// Documents
$doc-currents-options-height: 50px;
$doc-currents-mobile-options-height: 40px;
$doc-breadcrumb-size: 60px;
$doc-breadcrumb-mobile-size: 40px;

// Dashboard
$all-events-header-height: 48px;

// Progression
$switch-mode-banner-height: 80px;

// Groups
$groups-header-height: 74px;
$groups-details-header-height: 100px;
$groups-mobile-details-header-height: 40px;

// Messaging
$messaging-header-height: 60px;
$messaging-mobile-header-height: 60px;

// User management
$um-ĥeader-height: 50px;
$um-user-header-height: 70px;
$um-fields-height: 50px;

// Quick search
$quick-search-banner-height: 40px;
$quick-search-result-height: 50px;
$quick-search-result-width: 441px;
$quick-search-horizontal-padding: 24px;

